top_messageの内容を短いものに変更。

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <p class=editor>著：<a href="https://twitter.com/sounisi5011Vore">sounisi5011</a>
 
-<p class=top_message>voreオフで体験した事や、記録しておきたいことを書いていたりするかもしれない。
+<p class=top_message>voreオフの体験談。または備忘録。
 </header>
 
 <main class=meet_up_list>voreオフ未参加のため、記録無し</main>
