voreオフ一覧の初期メッセージをp要素で囲む。

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 <p class=top_message>voreオフの体験談。または備忘録。
 </header>
 
-<main class=meet_up_list>voreオフ未参加のため、記録無し</main>
+<main class=meet_up_list>
+  <p>voreオフ未参加のため、記録無し
+</main>
 
 <footer>
 <p><small>&copy; 2016 sounisi5011</small>
