--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <a href="https://twitter.com/sounisi5011">@sounisi5011</a>
   / <a href="https://twitter.com/sounisi5011Prog">@sounisi5011Prog</a>
   / <a href="https://twitter.com/sounisi5011Vore">@sounisi5011Vore</a>
-  / <a href="https://twitter.com/sounisi5011Vore">@sounisi5011R18G</a>
+  / <a href="https://twitter.com/sounisi5011R18G">@sounisi5011R18G</a>
 </address>
 
 <p class=view_on_github><a href="https://github.com/sounisi5011/vore-meet-up" title="View on GitHub"><img src="/vore-meet-up/assets/github-mark-32.png" srcset="/vore-meet-up/assets/github-mark-128.png 128w, /vore-meet-up/assets/github-mark-64.png 64w, /vore-meet-up/assets/github-mark-32.png 32w" sizes=32px alt="View on GitHub"></a>
