パス指定を相対パスに変更し、ローカルでも容易に開発できるよう修正

--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
 <meta name=format-detection content="telephone=no,email=no,address=no">
 <title>voreオフ備忘録 by sounisi5011</title>
 <meta name=description content="sounisi5011による、voreオフの体験談または備忘録">
+<!--
 <base href="//sounisi5011.github.io/vore-meet-up/">
+-->
 <link rel="dns-prefetch" href="//www.google-analytics.com">
 <link rel=canonical href="https://sounisi5011.github.io/vore-meet-up/">
-<link rel=stylesheet href="/vore-meet-up/assets/normalize.css">
-<link rel=stylesheet href="/vore-meet-up/assets/reset.css">
-<link rel=stylesheet href="/vore-meet-up/assets/app.css">
+<link rel=stylesheet href="./assets/normalize.css">
+<link rel=stylesheet href="./assets/reset.css">
+<link rel=stylesheet href="./assets/app.css">
+<!--
 <script src="/vore-meet-up/assets/uat.js"></script>
+-->
 
 <header>
   <ol class=breadcrumb_list>
-    <li class=here><a href="/vore-meet-up/">トップ</a>
+    <li class=here><a href="./">トップ</a>
   </ol>
   <h1 id=page_title>voreオフ備忘録</h1>
   <p class=editor>著：<a href="https://twitter.com/sounisi5011Vore">sounisi5011</a>
@@ -36,5 +40,5 @@
     / <a href="https://twitter.com/sounisi5011Vore">@sounisi5011Vore</a>
     / <a href="https://twitter.com/sounisi5011R18G">@sounisi5011R18G</a>
   </address>
-  <p class=view_on_github><a href="https://github.com/sounisi5011/vore-meet-up" title="View on GitHub"><img src="/vore-meet-up/assets/github-mark-32.png" srcset="/vore-meet-up/assets/github-mark-128.png 128w, /vore-meet-up/assets/github-mark-64.png 64w, /vore-meet-up/assets/github-mark-32.png 32w" sizes=32px alt="View on GitHub"></a>
+  <p class=view_on_github><a href="https://github.com/sounisi5011/vore-meet-up" title="View on GitHub"><img src="./assets/github-mark-32.png" srcset="./assets/github-mark-128.png 128w, ./assets/github-mark-64.png 64w, ./assets/github-mark-32.png 32w" sizes=32px alt="View on GitHub"></a>
 </footer>
